--- a/Mongo-Express-Monolithic/.env
+++ b/Mongo-Express-Monolithic/.env
@@ -1,7 +1,14 @@
-ME_CONFIG_MONGODB_URL=mongodb://admin:password@10.10.2.254:27017/admin
-ME_CONFIG_BASICAUTH_ENABLED=true
+
+### ME_CONFIG_MONGODB_URL=mongodb://mongodb_user:mongodb_user_passwd@mongodb_IP:27017/mongodb
+ME_CONFIG_MONGODB_URL=mongodb://admin:password@10.10.2.254:27017/admin   
+
+### Mongo-Express default user 
 ME_CONFIG_BASICAUTH_USERNAME=express
+
+### Mongo-Express default user password 
 ME_CONFIG_BASICAUTH_PASSWORD=password
+
+ME_CONFIG_BASICAUTH_ENABLED=true
 ME_CONFIG_MONGODB_ENABLE_ADMIN=true
 ME_CONFIG_MONGODB_AUTH_DATABASE=""
 #ME_CONFIG_SITE_COOKIESECRET="mongoexpress"
